@@ -60,6 +60,7 @@
 			<parameter type="int" name="transBackground" min="0" max="25" displaytext="{tr(transBackground)}">10</parameter>
 			<parameter type="int" name="transLists" min="0" max="20" displaytext="{tr(transLists)}">5</parameter>
 			<parameter type="bool" name="sysinfoPBtheme" displaytext="{tr(sysinfoPBtheme)}">1</parameter>
+			<parameter type="bool" name="longElapsedBar" displaytext="{tr(longElapsedBar)}">0</parameter>
 		</submenu>
 	</menu>
     <!--
@@ -141,6 +142,10 @@
 		<token name="tr(sysinfoPBtheme)">
 			<trans lang="en_EN">Bars in systeminfo-plugin in themecolors</trans>
 			<trans lang="de_DE">Balken im systeminfo-plugin in Themefarben</trans>
+		</token>
+		<token name="tr(longElapsedBar)">
+			<trans lang="en_EN">Show elapsedbar beneath events (recordings, whatsonnow)</trans>
+			<trans lang="de_DE">Zeige Balken für abgelaufene Zeit unterhalb der Titel (Aufzeichnungen, Jetzt)</trans>
 		</token>
 <!--channelInfo-->
 		<token name="tr(channelInfo)">
